@@ -429,6 +429,10 @@ local function ToadTraitButter()
     local player = getPlayer();
     if player:HasTrait("butterfingers") and player:isPlayerMoving() then
         local basechance = 5;
+        local chanceinx = 2000;
+        if SandboxVars.MoreTraits.ButterfingersChance then
+            chanceinx = SandboxVars.MoreTraits.ButterfingersChance;
+        end
         if player:HasTrait("AllThumbs") then
             basechance = basechance + 1;
         end
@@ -453,8 +457,9 @@ local function ToadTraitButter()
             chancemod = math.floor(weight / 5);
         end
         local chance = (basechance + chancemod);
-        if chance >= ZombRand(1000) then
+        if chance >= ZombRand(chanceinx) then
             player:dropHandItems();
+            player:say(getText("UI_butterfingers_triggered"));
         end
     end
 end
